# spi_lcd_touch

./: .gitignore
main/: CMakeLists.txt  idf_component.yml  spi_lcd_touch_example_main.c
main/lvgl/: lv_conf.h
main/ui/: screens.c  screens.h
