idf_component_register(SRCS "spi_lcd_touch_example_main.c" 
                            "lvgl_demo_ui.c" 
                            "ui/ui.c"
                            "ui/images.c"
                            "ui/screens.c"
                            "ui/styles.c"
                       INCLUDE_DIRS ".")
